--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
             <a href="#blogs">blogs</a>
         </div>
 
-        <div class="credit">inspirado em <span>mr.web designer</span> e adaptado por <span>IGor</span> | Todos os direitos reservados</div>
+        <div class="credit">Desenhado por <span>AnaVitoria</span> e adaptado por <span>IGor</span> | Todos os direitos reservados</div>
 
     </section>
 
